--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/7818e12ab5.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Ohmyfood</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -79,7 +79,7 @@
             <a class="card" href="./Pages-html/la-note-enchantée.html">
               <img
                 src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="assiette poisson et salade"
+                alt="assiette fruits de mer"
               />
               <div class="card__description">
                 <div class="left-description">
@@ -103,7 +103,7 @@
             <a class="card" href="./Pages-html/a-la-francaise.html">
               <img
                 src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="assiette poisson et salade"
+                alt="assiette boule de glaces"
               />
               <div class="card__description">
                 <div class="left-description">
@@ -126,7 +126,7 @@
             <a class="card" href="./Pages-html/le-délice-des-sens.html">
               <img
                 src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="assiette poisson et salade"
+                alt="assiette poisson légumes"
               />
               <div class="card__description">
                 <div class="left-description">
